<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/d20"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Product_Details_Activity_Iv_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d10"
            android:contentDescription="@string/des_back"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Company_Name"
            style="@style/textViewTheme"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/company_name" />
        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Product_Type"
            style="@style/textViewTheme"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/product_type" />
        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Product_Size"
            style="@style/textViewTheme"
            android:text="@string/product_size" />

        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Product_Code"
            style="@style/textViewTheme"
            android:text="@string/product_code" />

        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Product_Name"
            style="@style/textViewTheme"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Size_In_Meters"
            style="@style/textViewTheme"
            android:text="@string/size_in_meters" />



        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Ton"
            style="@style/textViewTheme"
            android:text="@string/ton" />

        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Product_Quality"
            style="@style/textViewTheme"
            android:text="@string/product_quality" />

        <TextView
            android:id="@+id/Product_Details_Activity_Tv_Product_Quantity"
            style="@style/textViewTheme"
            android:text="@string/product_quantity" />


    </LinearLayout>

</ScrollView>