<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/d10">
        <ImageView
            android:id="@+id/Add_Product_Fragment_Iv_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/d20"
            android:layout_marginTop="@dimen/d20"
            android:layout_marginBottom="@dimen/d20"
            android:contentDescription="@string/des_back"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/Add_Product_Fragment_Tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="@dimen/s20" />

        <TextView
            android:id="@+id/Add_Product_Fragment_Tv_product_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d20"
            android:textColor="@color/Black"
            android:textSize="@dimen/s20" />

        <Spinner
            android:id="@+id/Add_Product_Fragment_S_product_quality"
            style="@style/spinnerTheme"
            android:entries="@array/quality" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Add_Product_Fragment_Til_product_code"
            style="@style/textInputLayoutTheme">

            <android.support.design.widget.TextInputEditText
                style="@style/textEditTextTheme"
                android:hint="@string/product_code"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Add_Product_Fragment_Til_product_name"
            style="@style/textInputLayoutTheme">

            <android.support.design.widget.TextInputEditText
                style="@style/textEditTextTheme"
                android:hint="@string/product_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Add_Product_Fragment_Til_size_in_meters"
            style="@style/textInputLayoutTheme">

            <android.support.design.widget.TextInputEditText
                style="@style/textEditTextTheme"
                android:hint="@string/size_in_meters"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Add_Product_Fragment_Til_tonC"
            style="@style/textInputLayoutTheme">

            <android.support.design.widget.TextInputEditText
                style="@style/textEditTextTheme"
                android:hint="@string/ton"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Add_Product_Fragment_Til_product_size"
            style="@style/textInputLayoutTheme">

            <android.support.design.widget.TextInputEditText
                style="@style/textEditTextTheme"
                android:hint="@string/product_size"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Add_Product_Fragment_Til_product_quantity"
            style="@style/textInputLayoutTheme">

            <android.support.design.widget.TextInputEditText
                style="@style/textEditTextTheme"
                android:hint="@string/product_quantity"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Add_Product_Fragment_Btn_Add_Product"
            style="@style/buttonTheme"
            android:layout_gravity="center"
            android:text="@string/save_product" />

    </LinearLayout>

</ScrollView>