<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/d10"
        android:text="@string/sale_quantity"
        android:textColor="@color/Black"
        android:textSize="@dimen/s20" />

    <TextView
        android:id="@+id/Dialog_Sale_Quantity_Tv_Available_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/d10"
        android:textColor="@color/Black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/Dialog_Sale_Quantity_Til_Quantity_Unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/d10"
            android:entries="@array/average" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Dialog_Sale_Quantity_Til_product_quantity"
            style="@style/textInputLayoutTheme"
            android:layout_width="@dimen/d200">

            <android.support.design.widget.TextInputEditText
                style="@style/textEditTextTheme"
                android:hint="@string/product_quantity"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Dialog_Sale_Quantity_Til_Customer_Name"
        style="@style/textInputLayoutTheme"
        android:layout_marginTop="@dimen/d20"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            style="@style/textEditTextTheme"
            android:hint="@string/customer_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Dialog_Sale_Quantity_Til_Out_Number"
        style="@style/textInputLayoutTheme"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            style="@style/textEditTextTheme"
            android:hint="@string/out_number"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/Dialog_Sale_Quantity_Btn_Decrease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/d60"
        android:layout_marginTop="@dimen/d60"
        android:layout_marginEnd="@dimen/d60"
        android:layout_marginBottom="@dimen/d16"
        android:background="@drawable/shape_btn"
        android:text="@string/decrease"
        android:textColor="@color/White" />


</LinearLayout>