<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/d16"
    >

    <TextView
        android:id="@+id/closeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_app"
        android:textSize="@dimen/s20"
        android:textColor="@color/Black"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/d16"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/closeText"
        android:layout_marginTop="@dimen/d16"
        >
        <Button
            android:id="@+id/Dialog_Close_App_Btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:background="@color/colorPrimary"
            android:layout_marginStart="@dimen/d16"
            android:layout_marginEnd="@dimen/d16"
            android:textColor="@color/White"
            style="@style/TextAppearance.AppCompat.Button"
            />

        <Button
            android:id="@+id/Dialog_Close_App_Btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/d16"
            android:layout_marginEnd="@dimen/d16"
            android:background="@color/colorPrimary"
            android:textColor="@color/White"
            style="@style/TextAppearance.AppCompat.Button"

            />
    </LinearLayout>


</RelativeLayout>